main/default/objects/Sub_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Order__r.Account_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>