main/default/objects/Sub_Order__c/fields/Actual_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Due_Date__c</fullName>
    <label>Actual Due Date</label>
    <type>DateTime</type>
</CustomField>