main/default/objects/Sub_Order__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <formula>text(Service_Location__r.Location__r.Building__r.Building_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Type</label>
    <type>Text</type>
</CustomField>