main/default/objects/Sub_Order__c/fields/Changed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Changed_Reason__c</fullName>
    <label>Changed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>