main/default/objects/Sub_Order__c/fields/CLICK_ITS_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>CLICK_ITS_Install_Date__c</fullName>
    <label>CLICK ITS Install Date</label>
    <type>Date</type>
</CustomField>