main/default/objects/Sub_Order__c/fields/CLICK_SIP_Activate_Date__c.field-meta.xml
<CustomField>
    <fullName>CLICK_SIP_Activate_Date__c</fullName>
    <label>CLICK SIP Activate Date</label>
    <type>Date</type>
</CustomField>