main/default/objects/Sub_Order__c/fields/Contract_Renewal_Order_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Order_Type_c__c</fullName>
    <label>Contract Renewal Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>