main/default/objects/Sub_Order__c/fields/Customer_Commit_Date_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commit_Date_Change_Reason__c</fullName>
    <label>Customer Commit Date Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>200 – Cust – Site Readiness</fullName>
            </value>
            <value>
                <fullName>202 – Cust – New Construction</fullName>
            </value>
            <value>
                <fullName>205 – Cust – Requested Date</fullName>
            </value>
            <value>
                <fullName>207 – Cust – Related Orders/Locations</fullName>
            </value>
            <value>
                <fullName>208 – Cust – No Access</fullName>
            </value>
            <value>
                <fullName>209 – Cust – MSA</fullName>
            </value>
            <value>
                <fullName>300 - Integra - Order Issue</fullName>
            </value>
            <value>
                <fullName>301 - Integra -  Network</fullName>
            </value>
            <value>
                <fullName>302 - Integra - Product Not Available</fullName>
            </value>
            <value>
                <fullName>303 - Integra - Technical ICB</fullName>
            </value>
            <value>
                <fullName>304 - Integra - Potential Breakage</fullName>
            </value>
            <value>
                <fullName>305 - Integra - Interval Set Wrong</fullName>
            </value>
            <value>
                <fullName>306 - Integra - System Constraint</fullName>
            </value>
            <value>
                <fullName>307 - Integra - Provisioning Resource</fullName>
            </value>
            <value>
                <fullName>308 – Field/Warehouse Resource</fullName>
            </value>
            <value>
                <fullName>309 – ITS/BTS PM Resource</fullName>
            </value>
            <value>
                <fullName>310 - Integra - Pulling Order In</fullName>
            </value>
            <value>
                <fullName>400 - LEC - Centurylink</fullName>
            </value>
            <value>
                <fullName>401 - LEC - Verizon/Frontier</fullName>
            </value>
            <value>
                <fullName>402 - LEC - ATT</fullName>
            </value>
            <value>
                <fullName>403 - LEC - Other Carriers</fullName>
            </value>
            <value>
                <fullName>404 - LEC - Carrier Freeze</fullName>
            </value>
            <value>
                <fullName>405 - LEC - Build Required</fullName>
            </value>
            <value>
                <fullName>500 - Sales - Discrepancy/Follow up Required</fullName>
            </value>
            <value>
                <fullName>501 - Sales - Order Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>