main/default/objects/Sub_Order__c/fields/Customer_Commit_Date_H__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commit_Date_H__c</fullName>
    <description>Date Format of Customer Commit Date</description>
    <formula>DATEVALUE( Customer_Commit_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Commit Date H</label>
    <type>Date</type>
</CustomField>