main/default/objects/Sub_Order__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Sub-Orders</relationshipLabel>
    <relationshipName>Sub_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>