main/default/objects/Sub_Order__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Media Gateway PRI</fullName>
            </value>
            <value>
                <fullName>Media Gateway Analog</fullName>
            </value>
            <value>
                <fullName>Media ATA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>