main/default/objects/Sub_Order__c/fields/External_Order__c.field-meta.xml
<CustomField>
    <fullName>External_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>External Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>External orders must belong to the same order</errorMessage>
        <filterItems>
            <field>Order_Property__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>External_Order</value>
        </filterItems>
        <filterItems>
            <field>Order_Property__c.Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order_Property__c</referenceTo>
    <relationshipLabel>Sub Orders</relationshipLabel>
    <relationshipName>Sub_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>