main/default/objects/Sub_Order__c/fields/External_Products__c.field-meta.xml
<CustomField>
    <fullName>External_Products__c</fullName>
    <label>External Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>