main/default/objects/Sub_Order__c/fields/FOC_date__c.field-meta.xml
<CustomField>
    <fullName>FOC_date__c</fullName>
    <label>Carrier FOC date</label>
    <type>Date</type>
</CustomField>