main/default/objects/Sub_Order__c/fields/Hardware_QTY_5__c.field-meta.xml
<CustomField>
    <fullName>Hardware_QTY_5__c</fullName>
    <label>Hardware QTY (5)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>