main/default/objects/Sub_Order__c/fields/Hardware_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Type_2__c</fullName>
    <label>Hardware Type (2)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accedian - AMN-1000-TE NID (AC)       Part#: 716-000</fullName>
            </value>
            <value>
                <fullName>Accedian - AMN-1000-TE NID (DC)       Part#: 716-009</fullName>
            </value>
            <value>
                <fullName>Accedian - Metro-Node (DC)            Part#: 750-1011</fullName>
            </value>
            <value>
                <fullName>Accedian - Metro-Node PS (AC)         Part#: 720-500</fullName>
            </value>
            <value>
                <fullName>Adtran - 3430 Part#: 1202820F1</fullName>
            </value>
            <value>
                <fullName>Adtran - 4430          Part#: 1700630E1</fullName>
            </value>
            <value>
                <fullName>Adtran - 5305          Part#: 4200990L1</fullName>
            </value>
            <value>
                <fullName>Adtran - 814          Part#: 1200637G4</fullName>
            </value>
            <value>
                <fullName>Adtran - 818          Part#: 4200637G2 (W/ AC Power Supply)</fullName>
            </value>
            <value>
                <fullName>Adtran - 834T         Part#: 1172834G1</fullName>
            </value>
            <value>
                <fullName>Adtran - 838T         Part#: 1172838G1</fullName>
            </value>
            <value>
                <fullName>Adtran - 873           Part#: 1200639G1</fullName>
            </value>
            <value>
                <fullName>Adtran - NetVanta 3140 Part# 4700341F2-100-INTG</fullName>
            </value>
            <value>
                <fullName>Adtran - NetVanta 3140 Part# 4700341F2-25-INTGR</fullName>
            </value>
            <value>
                <fullName>Adtran - NetVanta 3140 Part# 4700341F2-300-INTG</fullName>
            </value>
            <value>
                <fullName>Adtran - NetVanta 5660 Part# 17005660F1-INTGR</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1234  Part#: 1702595G1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1238  Part#: 1700598G1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1238   Part#: 1700599G1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1531P  Part#: 1700571F1</fullName>
            </value>
            <value>
                <fullName>Adtran -  PoE - 1534  Part#: 1700591G1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1544 Part#: 1702544G1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1550-24P      Part#: 17101524PF1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1550-48P      Part#: 17101548PF1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 1638  Part#: 4700569F1</fullName>
            </value>
            <value>
                <fullName>Adtran - PoE - 6355   Part#: 1200740E1</fullName>
            </value>
            <value>
                <fullName>Adtran - TA904         Part#: 4212904L1</fullName>
            </value>
            <value>
                <fullName>Adtran - TA908E        Part#: 4242908L1</fullName>
            </value>
            <value>
                <fullName>Adtran - TA908         Part#: 4212908L1</fullName>
            </value>
            <value>
                <fullName>Adtran - TA916E        Part#: 4242916L1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>