main/default/objects/Sub_Order__c/fields/Has_Blocked_Workstep__c.field-meta.xml
<CustomField>
    <fullName>Has_Blocked_Workstep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the suborder has any blocked worksteps</description>
    <label>Has Blocked Workstep</label>
    <type>Checkbox</type>
</CustomField>