main/default/objects/Sub_Order__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <label>Install Date</label>
    <type>DateTime</type>
</CustomField>