main/default/objects/Sub_Order__c/fields/Internal_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Billing_Account__c</fullName>
    <label>Internal Billing Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>