main/default/objects/Sub_Order__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <formula>Customer_Detail__r.Legacy_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy ID</label>
    <type>Text</type>
</CustomField>