main/default/objects/Sub_Order__c/fields/Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System__c</fullName>
    <label>Legacy System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>IBIS</fullName>
            </value>
            <value>
                <fullName>ICMS</fullName>
            </value>
            <value>
                <fullName>ATTOM</fullName>
                <isActive>false</isActive>
                <label>ATTOM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>