main/default/objects/Sub_Order__c/fields/Meta_Password__c.field-meta.xml
<CustomField>
    <fullName>Meta_Password__c</fullName>
    <label>Meta Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>