main/default/objects/Sub_Order__c/fields/Milestone_Workstep__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Workstep__c</fullName>
    <inlineHelpText>Milestone of Open/Blocked Workstep</inlineHelpText>
    <label>Milestone of Workstep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>