main/default/objects/Sub_Order__c/fields/Missed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Reason__c</fullName>
    <label>Missed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build: BLA</fullName>
            </value>
            <value>
                <fullName>Build: Entrance Facilities - Customer Provided</fullName>
            </value>
            <value>
                <fullName>Build: Entrance facilities – LEC Provided</fullName>
            </value>
            <value>
                <fullName>Build: Hazardous Conditions</fullName>
            </value>
            <value>
                <fullName>Build: Other</fullName>
            </value>
            <value>
                <fullName>Build: Permitting</fullName>
            </value>
            <value>
                <fullName>Building Construction: Can&#39;t Deliver Facilities</fullName>
            </value>
            <value>
                <fullName>Building Construction: Can&#39;t Install Equpment Needed</fullName>
            </value>
            <value>
                <fullName>Building Construction: Can&#39;t Order Facilities</fullName>
            </value>
            <value>
                <fullName>Customer/Vendor Not Ready: Can&#39;t Complete Activation</fullName>
            </value>
            <value>
                <fullName>Customer/Vendor Not Ready: Can&#39;t Deliver Facilities</fullName>
            </value>
            <value>
                <fullName>Customer/Vendor Not Ready: Can&#39;t Install Equpment Needed</fullName>
            </value>
            <value>
                <fullName>Equpment Not Ready</fullName>
            </value>
            <value>
                <fullName>Facility: Entrance Facilities - Customer Provided</fullName>
            </value>
            <value>
                <fullName>Facility: Entrance facilities – LEC Provided</fullName>
            </value>
            <value>
                <fullName>Facility: No Copper</fullName>
            </value>
            <value>
                <fullName>Facility: Other</fullName>
            </value>
            <value>
                <fullName>Facility: Pairs Defective or Unavailable</fullName>
            </value>
            <value>
                <fullName>Fiber Build: BLA not issued</fullName>
            </value>
            <value>
                <fullName>Fiber Build: Construction in Process</fullName>
            </value>
            <value>
                <fullName>Fiber Build: Funding</fullName>
            </value>
            <value>
                <fullName>Fiber Build: Permiting not complete</fullName>
            </value>
            <value>
                <fullName>Fiber Build: Structure load inaccurate or incomplete</fullName>
            </value>
            <value>
                <fullName>Hardware Install Failure: N/A</fullName>
            </value>
            <value>
                <fullName>Inside Wiring Not Ready</fullName>
            </value>
            <value>
                <fullName>Network Capacity</fullName>
            </value>
            <value>
                <fullName>Order Error: Design Issue</fullName>
            </value>
            <value>
                <fullName>Order Error: LNP Issue</fullName>
            </value>
            <value>
                <fullName>Order Error: Ordered Facilities Issue</fullName>
            </value>
            <value>
                <fullName>Order Error: Provisioning Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>