main/default/objects/Sub_Order__c/fields/New_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Start_Date__c</fullName>
    <label>New Contract Start Date</label>
    <type>Date</type>
</CustomField>