main/default/objects/Sub_Order__c/fields/Old_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Contract_End_Date__c</fullName>
    <label>Old Contract End Date</label>
    <type>Date</type>
</CustomField>