main/default/objects/Sub_Order__c/fields/Order_Entry_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Rep_Email__c</fullName>
    <formula>Order_Entry_Rep__r.Email</formula>
    <label>Order Entry Rep Email</label>
    <type>Text</type>
</CustomField>