main/default/objects/Sub_Order__c/fields/Order_Entry_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Rep_Phone__c</fullName>
    <formula>Order_Entry_Rep__r.Phone</formula>
    <label>Order Entry Rep Phone</label>
    <type>Text</type>
</CustomField>