main/default/objects/Sub_Order__c/fields/Order_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Manager_Email__c</fullName>
    <formula>Order_Manager__r.Email</formula>
    <label>Order Manager Email</label>
    <type>Text</type>
</CustomField>