main/default/objects/Sub_Order__c/fields/Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Record_Type__c</fullName>
    <formula>Order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type</label>
    <type>Text</type>
</CustomField>