main/default/objects/Sub_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Service Migration (VSOF)</fullName>
                <isActive>false</isActive>
                <label>Service Migration (VSOF)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>