main/default/objects/Sub_Order__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>CPM use this to group multiple customer locations based on installation turn up phases/timelines.</description>
    <inlineHelpText>CPM use this to group multiple customer locations based on installation turn up phases/timelines.</inlineHelpText>
    <label>Project ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>