main/default/objects/Sub_Order__c/fields/Projected_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Due_Date__c</fullName>
    <label>Projected Due Date</label>
    <type>DateTime</type>
</CustomField>