main/default/objects/Sub_Order__c/fields/Projected_Due_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Projected_Due_Date_Actual__c</fullName>
    <inlineHelpText>The actual calculated date of when the SubOrder will be complete. This date responds to blocked/locked late worksteps and recalculates accordingly.</inlineHelpText>
    <label>Projected Due Date (Actual)</label>
    <type>Date</type>
</CustomField>