main/default/objects/Sub_Order__c/fields/Provisioning_Product__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provisioning Product</label>
    <referenceTo>Provisioning_Product__c</referenceTo>
    <relationshipLabel>Sub Orders</relationshipLabel>
    <relationshipName>Sub_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>