main/default/objects/Sub_Order__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipLabel>Sub-Orders</relationshipLabel>
    <relationshipName>Sub_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>