main/default/objects/Sub_Order__c/fields/Software_PO__c.field-meta.xml
<CustomField>
    <fullName>Software_PO__c</fullName>
    <description>Software PO# for UCCV</description>
    <label>Software PO#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>