main/default/objects/Sub_Order__c/fields/Sub_Order_Overview__c.field-meta.xml
<CustomField>
    <fullName>Sub_Order_Overview__c</fullName>
    <label>Sub-Order Overview</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>