main/default/objects/Sub_Order__c/fields/Sub_Order_Summary_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Order_Summary_Status__c</fullName>
    <label>Sub-Order Summary Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Card</fullName>
            </value>
            <value>
                <fullName>BLA</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Equipment/Licenses</fullName>
            </value>
            <value>
                <fullName>LEC</fullName>
            </value>
            <value>
                <fullName>Permits</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>