main/default/objects/Sub_Order__c/fields/Sub_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sequence__c</fullName>
    <label>Sub-Sequence</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>