main/default/objects/Sub_Order__c/fields/Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_Time__c</fullName>
    <label>Test Date Time</label>
    <type>DateTime</type>
</CustomField>