main/default/objects/Sub_Order__c/fields/Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR__c</fullName>
    <description>Total of the MRR associated to each Sub-Order Group</description>
    <inlineHelpText>This is the total amount of MRR associated to the Sub-Order Groups related to this sub order</inlineHelpText>
    <label>Total MRR</label>
    <summarizedField>Sub_Order_Group__c.MRR__c</summarizedField>
    <summaryFilterItems>
        <field>Sub_Order_Group__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancel</value>
    </summaryFilterItems>
    <summaryForeignKey>Sub_Order_Group__c.Sub_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>