main/default/objects/Sub_Order__c/fields/Winback_PON__c.field-meta.xml
<CustomField>
    <fullName>Winback_PON__c</fullName>
    <label>Winback PON</label>
    <length>50</length>
    <type>Text</type>
</CustomField>