main/default/objects/Sub_Order__c/fields/ZEX_Number__c.field-meta.xml
<CustomField>
    <fullName>ZEX_Number__c</fullName>
    <label>ZEX Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>