main/default/objects/Sub_Order__c/validationRules/CCDSIPChangeReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CCDSIPChangeReasonRequired</fullName>
    <active>true</active>
    <description>Changes to Customer SIP Commit Date require a change reason to be specified.</description>
    <errorConditionFormula>ISCHANGED(Customer_SIP_Commit_Date__c) &amp;&amp; 
NOT(ISNULL(PRIORVALUE(Customer_SIP_Commit_Date__c))) &amp;&amp; ISBLANK(TEXT(Customer_SIP_Commit_Date_Change_Reason__c)) &amp;&amp; NOT(ISNULL(Customer_SIP_Commit_Date__c))</errorConditionFormula>
    <errorDisplayField>Customer_SIP_Commit_Date_Change_Reason__c</errorDisplayField>
    <errorMessage>Changes to Customer SIP Commit Date require a change reason to be specified.</errorMessage>
</ValidationRule>